--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMgjSWOPwq2nETUTz32BpPE",
+      "authorship_tag": "ABX9TyMudKAZ9Udaht69CPRJ8cHa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,6 +307,164 @@
       },
       "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ตัวอย่าง function `print`"
+      ],
+      "metadata": {
+        "id": "daZ-t3-kOuxk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('สุวิชญา',end=' -> ')\n",
+        "print('623020455-5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FiyzmyriO3P-",
+        "outputId": "a7e24fe1-9ebc-43c7-cb5f-ed780562cf05"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สุวิชญา -> 623020455-5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('สุวิชญา','623020455-5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NFW05uu-POWz",
+        "outputId": "3d059010-66d2-4499-8154-ccdbfb698c87"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สุวิชญา 623020455-5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('สุวิชญา','623020455-5',sep=' & ')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mwv1kWPlPjzM",
+        "outputId": "a4f6fd4a-ec58-4cf7-8b99-b7adc5741333"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "สุวิชญา & 623020455-5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## input ของ finction แบ่งเป็น 2 ชนิด (จำเป็นต้องใส่ กับ ไม่จำเป็นต้องใส่)"
+      ],
+      "metadata": {
+        "id": "Htixb5xRQDKq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ตัวอย่าง function `print_grade()`มี input 3 ตัว จำเป็นต้องใส่ 2 ตัว คือ name กับ id และไม่จำเป็นต้องใส่ 1 ตัว คือเกรด ซึ่งมีค่า default เป็น F"
+      ],
+      "metadata": {
+        "id": "mVJvneBARBTv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_grade(name,id,grade = 'F'):\n",
+        "    print(f' รหัสประจำตัว {id} ชื่อ {name} ')\n",
+        "    print(f' ได้เกรด {grade} ')"
+      ],
+      "metadata": {
+        "id": "0ba_5QW_QMrk"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_grade('นางสาวสุวิชญา ก้องเวหา', '623020455-5','A')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ReBFDLG1Rpnb",
+        "outputId": "92f0e54d-89a1-4528-826d-04dd695b8faa"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " รหัสประจำตัว 623020455-5 ชื่อ นางสาวสุวิชญา ก้องเวหา \n",
+            " ได้เกรด A \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_grade(id = '623020455-5',name = 'นางสาวสุวิชญา ก้องเวหา',grade='B+')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d-ukNrURR3AW",
+        "outputId": "c9740c85-3ea2-46e7-f03f-75f17dcbb1e6"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " รหัสประจำตัว 623020455-5 ชื่อ นางสาวสุวิชญา ก้องเวหา \n",
+            " ได้เกรด B+ \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
