--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMudKAZ9Udaht69CPRJ8cHa",
+      "authorship_tag": "ABX9TyMR88OTbgZMLH2qswqijeYO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "id": "TOT7T6HSEBQc",
         "outputId": "505f1a1a-1984-43aa-c924-6a02bfc25513"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
         "id": "_4-Fe13CEBJh",
         "outputId": "e96ec493-a6e3-4e75-a622-d2d76c7b4c06"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "mFno-TNgEA7o"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
       "metadata": {
         "id": "b2vB2_b7EAw1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         "id": "ju8GlbuIInQZ",
         "outputId": "54b72e35-d108-4e26-b00e-705a9a66a665"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "id": "LmWneu_eEAep",
         "outputId": "0182f1ce-638e-498f-8f92-d802e6d278a0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -248,7 +248,7 @@
       "metadata": {
         "id": "Mlrq3aTsJenx"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +263,7 @@
         "id": "sCzDf5oCJ1V8",
         "outputId": "5b80786f-123e-449c-c6bf-80b1bb913172"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +286,7 @@
         "id": "1-m3yXiLKfPL",
         "outputId": "7955f763-95a4-42c0-acaf-0c333458c664"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,13 +305,13 @@
       "metadata": {
         "id": "CJ_g-T2bLPGb"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "ตัวอย่าง function `print`"
+        "[ข้อความลิงก์](https://)ตัวอย่าง function `print` https://www.programiz.com/python-programming/methods/built-in/print"
       ],
       "metadata": {
         "id": "daZ-t3-kOuxk"
@@ -330,7 +330,7 @@
         "id": "FiyzmyriO3P-",
         "outputId": "a7e24fe1-9ebc-43c7-cb5f-ed780562cf05"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +353,7 @@
         "id": "NFW05uu-POWz",
         "outputId": "3d059010-66d2-4499-8154-ccdbfb698c87"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "id": "Mwv1kWPlPjzM",
         "outputId": "a4f6fd4a-ec58-4cf7-8b99-b7adc5741333"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "0ba_5QW_QMrk"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
         "id": "ReBFDLG1Rpnb",
         "outputId": "92f0e54d-89a1-4528-826d-04dd695b8faa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -454,7 +454,7 @@
         "id": "d-ukNrURR3AW",
         "outputId": "c9740c85-3ea2-46e7-f03f-75f17dcbb1e6"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
