--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMR88OTbgZMLH2qswqijeYO",
+      "authorship_tag": "ABX9TyP8XY0eVJrCAtwla57p/zjf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "mFno-TNgEA7o"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "0ba_5QW_QMrk"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -474,6 +474,297 @@
       "metadata": {
         "id": "Xd6xFTIrDzgA"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "for member in listEx:\n",
+        "    do_something()\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "5iid0AY0TS2a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for member in [1,2,3,4,5,6]:\n",
+        "    print(member)"
+      ],
+      "metadata": {
+        "id": "CwtCzfpoTQ0q",
+        "outputId": "14d9cced-f55d-45b3-e821-c4cdb998edae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_name(name):\n",
+        "    print(f'ฉันชื่อ {name}')"
+      ],
+      "metadata": {
+        "id": "8lkxljnZUppJ"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for name in ['สุวิชญา','ซาบาริต้า','โปเต้','บูบู้','แบะๆ']:\n",
+        "    N=name #ไม่จำเป็นต้องทำก็ได้\n",
+        "    print_name(N)"
+      ],
+      "metadata": {
+        "id": "wPJMen-wVIiu",
+        "outputId": "d16e4036-d646-49aa-8729-ed7b1b0cc78f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ฉันชื่อ สุวิชญา\n",
+            "ฉันชื่อ ซาบาริต้า\n",
+            "ฉันชื่อ โปเต้\n",
+            "ฉันชื่อ บูบู้\n",
+            "ฉันชื่อ แบะๆ\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name_id_grade = [['นางสาวสุวิชญา ก้องเวหา','623030455-5','A'],['ดอลลี่ โชเช','623020455-6','B+'],['หลิงหลิง จีจ้า','623020455-7', 'B']]"
+      ],
+      "metadata": {
+        "id": "iBwIobXrWTJ7"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for each in list_name_id_grade:\n",
+        "    name = each[0]\n",
+        "    id = each[1]\n",
+        "    grade = each [2]\n",
+        "    print_grade(name,id,grade)\n",
+        "    print('-------------------------')"
+      ],
+      "metadata": {
+        "id": "30O-fVN9XZOV",
+        "outputId": "717681dd-1a16-42cc-c5d2-3002befc9711",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " รหัสประจำตัว 623030455-5 ชื่อ นางสาวสุวิชญา ก้องเวหา \n",
+            " ได้เกรด A \n",
+            "-------------------------\n",
+            " รหัสประจำตัว 623020455-6 ชื่อ ดอลลี่ โชเช \n",
+            " ได้เกรด B+ \n",
+            "-------------------------\n",
+            " รหัสประจำตัว 623020455-7 ชื่อ หลิงหลิง จีจ้า \n",
+            " ได้เกรด B \n",
+            "-------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ใช้ for loop เพิ่มสมาชิกใน list"
+      ],
+      "metadata": {
+        "id": "y1pTdq3WYT2r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name = []\n",
+        "list_id = []\n",
+        "list_grade = []\n",
+        "for each in list_name_id_grade:\n",
+        "    list_name.append(each[0])\n",
+        "    list_id.append(each[1])\n",
+        "    list_grade.append(each[2])"
+      ],
+      "metadata": {
+        "id": "zxT0iufTYaKF"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_name"
+      ],
+      "metadata": {
+        "id": "IkVKV43FZvMZ",
+        "outputId": "9ed404d3-0f53-41c4-8c66-5ea89a5eadbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['นางสาวสุวิชญา ก้องเวหา', 'ดอลลี่ โชเช', 'หลิงหลิง จีจ้า']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###  การวนลูป `range()`"
+      ],
+      "metadata": {
+        "id": "_ELudUaabq3a"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100):\n",
+        "    print('งง', end = ' ')"
+      ],
+      "metadata": {
+        "id": "I3Jpmjg0bidP",
+        "outputId": "7fcf6f1d-ead6-4bd4-8f15-2d64574be935",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง งง "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Loop ซ้อน Loop"
+      ],
+      "metadata": {
+        "id": "zFuc_TjrcRz5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for mem1 in range (2,5): #[2,3,4]\n",
+        "    print(f'now mem1 = {mem1}')\n",
+        "    for mem2 in range(1,13): #[1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "        print(f'{mem1} x {mem2} = {mem1*mem2}' )\n",
+        "    print(f'end inder for mem1 = {mem1}')"
+      ],
+      "metadata": {
+        "id": "eRPGMUd8cPPg",
+        "outputId": "41c615da-2878-4c97-f4b0-744a724d8e33",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "now mem1 = 2\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "2 x 10 = 20\n",
+            "2 x 11 = 22\n",
+            "2 x 12 = 24\n",
+            "end inder for mem1 = 2\n",
+            "now mem1 = 3\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "3 x 10 = 30\n",
+            "3 x 11 = 33\n",
+            "3 x 12 = 36\n",
+            "end inder for mem1 = 3\n",
+            "now mem1 = 4\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "4 x 10 = 40\n",
+            "4 x 11 = 44\n",
+            "4 x 12 = 48\n",
+            "end inder for mem1 = 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
