--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8XY0eVJrCAtwla57p/zjf",
+      "authorship_tag": "ABX9TyO8qJpyENaniofJ3VAqEZsl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -494,11 +494,11 @@
         "    print(member)"
       ],
       "metadata": {
-        "id": "CwtCzfpoTQ0q",
-        "outputId": "14d9cced-f55d-45b3-e821-c4cdb998edae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CwtCzfpoTQ0q",
+        "outputId": "14d9cced-f55d-45b3-e821-c4cdb998edae"
       },
       "execution_count": 1,
       "outputs": [
@@ -536,11 +536,11 @@
         "    print_name(N)"
       ],
       "metadata": {
-        "id": "wPJMen-wVIiu",
-        "outputId": "d16e4036-d646-49aa-8729-ed7b1b0cc78f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wPJMen-wVIiu",
+        "outputId": "d16e4036-d646-49aa-8729-ed7b1b0cc78f"
       },
       "execution_count": 5,
       "outputs": [
@@ -579,11 +579,11 @@
         "    print('-------------------------')"
       ],
       "metadata": {
-        "id": "30O-fVN9XZOV",
-        "outputId": "717681dd-1a16-42cc-c5d2-3002befc9711",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "30O-fVN9XZOV",
+        "outputId": "717681dd-1a16-42cc-c5d2-3002befc9711"
       },
       "execution_count": 8,
       "outputs": [
@@ -636,11 +636,11 @@
         "list_name"
       ],
       "metadata": {
-        "id": "IkVKV43FZvMZ",
-        "outputId": "9ed404d3-0f53-41c4-8c66-5ea89a5eadbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IkVKV43FZvMZ",
+        "outputId": "9ed404d3-0f53-41c4-8c66-5ea89a5eadbc"
       },
       "execution_count": 11,
       "outputs": [
@@ -672,11 +672,11 @@
         "    print('งง', end = ' ')"
       ],
       "metadata": {
-        "id": "I3Jpmjg0bidP",
-        "outputId": "7fcf6f1d-ead6-4bd4-8f15-2d64574be935",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "I3Jpmjg0bidP",
+        "outputId": "7fcf6f1d-ead6-4bd4-8f15-2d64574be935"
       },
       "execution_count": 13,
       "outputs": [
@@ -708,11 +708,11 @@
         "    print(f'end inder for mem1 = {mem1}')"
       ],
       "metadata": {
-        "id": "eRPGMUd8cPPg",
-        "outputId": "41c615da-2878-4c97-f4b0-744a724d8e33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eRPGMUd8cPPg",
+        "outputId": "41c615da-2878-4c97-f4b0-744a724d8e33"
       },
       "execution_count": 15,
       "outputs": [
@@ -769,6 +769,53 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Loop in Function"
+      ],
+      "metadata": {
+        "id": "zXzq_RLwgCLI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_grade_loop(names,grades): #มีหลยตัวเติม s เข้าไปด้วย\n",
+        "    for n,g in zip (names,grades):\n",
+        "        print(f'{n} ได้เกรด {g}')"
+      ],
+      "metadata": {
+        "id": "GwhfIVyCf8pf"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_grade_loop(list_name,list_grade)"
+      ],
+      "metadata": {
+        "id": "zuMXEYRngu9y",
+        "outputId": "ff824672-46d8-48c5-a631-c6badfb7ca86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวสุวิชญา ก้องเวหา ได้เกรด A\n",
+            "ดอลลี่ โชเช ได้เกรด B+\n",
+            "หลิงหลิง จีจ้า ได้เกรด B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Conditional Statement (if)"
       ],
       "metadata": {
@@ -776,15 +823,213 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "```python\n",
+        "if condition1:\n",
+        "    do_something() ## ถ้า condition1 เป็นจริง ทำ do_something()\n",
+        "elif condition2:\n",
+        "    do_another_thing() ## ถ้า condition1 ไม่เป็นจริงแต่ condition2 เป็นจริง ทำ do_another_thing()\n",
+        "else:\n",
+        "    do_the_las_thing() ## ถ้าไม่มี condition ไหนเป็นจริงเลย ทำ di_the_last_thing()\n",
+        "```"
+      ],
       "metadata": {
-        "id": "Dib6JzWyDcZo"
+        "id": "qWOW-_MYh-0O"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "Dib6JzWyDcZo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38d4a280-17fa-496e-80e6-491f8bc1c03c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "นางสาวสุวิชญา ก้องเวหา ได้เกรด A\n",
+            "ดอลลี่ โชเช ได้เกรด F\n",
+            "หลิงหลิง จีจ้า ได้เกรด F\n"
+          ]
+        }
+      ],
+      "source": [
+        "for n in list_name:\n",
+        "    if len(n)>20:\n",
+        "        print(f'{n} ได้เกรด A')\n",
+        "    else:\n",
+        "        print(f'{n} ได้เกรด F')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### operator ที่ใช้ตรวจสอบ condition\n",
+        "\n",
+        "==, !=, >=, <=, <, >, and, or"
+      ],
+      "metadata": {
+        "id": "vX9zqfkNkLn7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10 == 20\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "_JXUnDUtkbWI",
+        "outputId": "9d75edc4-4fbd-446a-92cb-df0253ab4ad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 15 <= 20\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "mN9F1XZCkryF",
+        "outputId": "2fecc1bf-01e7-4698-e151-c25350530114",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "M9XhuwIvkz0q"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if True:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "EpvMdtLYlCdw",
+        "outputId": "e19c53ed-fa6a-4fdb-e9e2-a9eafad2aa67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a and b:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "yxZCIg93lHoP"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if a or b:\n",
+        "    print('x')"
+      ],
+      "metadata": {
+        "id": "-0pg0yLwlZxA",
+        "outputId": "bda7a56f-4696-4b6a-edd9-0cc451f94063",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# HW\n",
+        "เขียน function ตัดเกรด โดยที่ input เป็นคะแนน(0-100) , output เป็นเกรด (F-A) หรือ 'ไม่สามารถตัดเกรดได้'\n",
+        "\n",
+        "วนลูปตัดเกรด input = [1,50,65,90,101,-5,49,'ก',80]\n",
+        "\n",
+        "กำหนด\n",
+        "\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ  0  แต่น้อยกว่า 50 จะได้เกรด F\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 50 แต่น้อยกว่า 55 จะได้เกรด D\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 55 แต่น้อยกว่า 60 จะได้เกรด D+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 60 แต่น้อยกว่า 65 จะได้เกรด C\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 65 แต่น้อยกว่า 70 จะได้เกรด C+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 70 แต่น้อยกว่า 75 จะได้เกรด B\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 75 แต่น้อยกว่า 80 จะได้เกรด B+\n",
+        "*  ถ้าคะแนนอยู่ระหว่างมากกว่าหรือเท่ากับ 80  จะได้เกรด A\n",
+        "*  ถ้าคะแนนไม่อยู่ในช่วง 0-100 ให้ return 'ไม่สามารถตัดเกรดได้'"
+      ],
+      "metadata": {
+        "id": "X8HDF8jWlsbf"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "ELDb59NDnRBh"
+      }
     }
   ]
 }
