--- a/ฺBasic_Programming_Concepts.ipynb
+++ b/ฺBasic_Programming_Concepts.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ฺBasic Programming Concepts.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO8qJpyENaniofJ3VAqEZsl",
+      "authorship_tag": "ABX9TyMFcQ8p6NNozHCkjvuuKx0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +146,7 @@
       "metadata": {
         "id": "mFno-TNgEA7o"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "0ba_5QW_QMrk"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,7 +500,7 @@
         "id": "CwtCzfpoTQ0q",
         "outputId": "14d9cced-f55d-45b3-e821-c4cdb998edae"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "8lkxljnZUppJ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +542,7 @@
         "id": "wPJMen-wVIiu",
         "outputId": "d16e4036-d646-49aa-8729-ed7b1b0cc78f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +565,7 @@
       "metadata": {
         "id": "iBwIobXrWTJ7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
         "id": "30O-fVN9XZOV",
         "outputId": "717681dd-1a16-42cc-c5d2-3002befc9711"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -627,7 +627,7 @@
       "metadata": {
         "id": "zxT0iufTYaKF"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         "id": "IkVKV43FZvMZ",
         "outputId": "9ed404d3-0f53-41c4-8c66-5ea89a5eadbc"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -678,7 +678,7 @@
         "id": "I3Jpmjg0bidP",
         "outputId": "7fcf6f1d-ead6-4bd4-8f15-2d64574be935"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -714,7 +714,7 @@
         "id": "eRPGMUd8cPPg",
         "outputId": "41c615da-2878-4c97-f4b0-744a724d8e33"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +785,7 @@
       "metadata": {
         "id": "GwhfIVyCf8pf"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +840,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "Dib6JzWyDcZo",
         "colab": {
@@ -891,7 +891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +915,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +935,7 @@
       "metadata": {
         "id": "M9XhuwIvkz0q"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -951,7 +951,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +971,7 @@
       "metadata": {
         "id": "yxZCIg93lHoP"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -987,7 +987,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,13 +1023,92 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
+        "input = [1,50,65,90,101,-5,49,'ก',80]\n",
+        "print(input)"
       ],
       "metadata": {
-        "id": "ELDb59NDnRBh"
-      }
+        "id": "PCWHwX9Sfoy4",
+        "outputId": "1efedf5f-f7ce-467c-fd28-f8ad375907da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 50, 65, 90, 101, -5, 49, 'ก', 80]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for n in input:\n",
+        "    if n=='ก':\n",
+        "        print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "    else:\n",
+        "        if (n>=101):\n",
+        "            print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "        elif (n>=80):\n",
+        "            print(f'{n} คะแนน ได้เกรด A')\n",
+        "        elif (n>=75):\n",
+        "            print(f'{n} คะแนน ได้เกรด B+')\n",
+        "        elif (n>=70):\n",
+        "            print(f'{n} คะแนน ได้เกรด B')\n",
+        "        elif (n>=65):\n",
+        "            print(f'{n} คะแนน ได้เกรด C+')\n",
+        "        elif (n>=60):\n",
+        "            print(f'{n} คะแนน ได้เกรด C')\n",
+        "        elif (n>=55):\n",
+        "            print(f'{n} คะแนน ได้เกรด D+')\n",
+        "        elif (n>=50):\n",
+        "            print(f'{n} คะแนน ได้เกรด D')\n",
+        "        elif (n>=0):\n",
+        "            print(f'{n} คะแนน ได้เกรด F')\n",
+        "        else:\n",
+        "            print(f'{n} คะแนน ไม่สามารถตัดเกรดได้')\n",
+        "    print ('-----------------------------------------------------')"
+      ],
+      "metadata": {
+        "id": "vSu-adKlgQkC",
+        "outputId": "fd2b240b-9628-4659-8394-e4ccef59281f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 คะแนน ได้เกรด F\n",
+            "-----------------------------------------------------\n",
+            "50 คะแนน ได้เกรด D\n",
+            "-----------------------------------------------------\n",
+            "65 คะแนน ได้เกรด C+\n",
+            "-----------------------------------------------------\n",
+            "90 คะแนน ได้เกรด A\n",
+            "-----------------------------------------------------\n",
+            "101 คะแนน ไม่สามารถตัดเกรดได้\n",
+            "-----------------------------------------------------\n",
+            "-5 คะแนน ไม่สามารถตัดเกรดได้\n",
+            "-----------------------------------------------------\n",
+            "49 คะแนน ได้เกรด F\n",
+            "-----------------------------------------------------\n",
+            "ก คะแนน ไม่สามารถตัดเกรดได้\n",
+            "-----------------------------------------------------\n",
+            "80 คะแนน ได้เกรด A\n",
+            "-----------------------------------------------------\n"
+          ]
+        }
+      ]
     }
   ]
 }
